--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css);
 /* *{
     margin-bottom: 30%;
 } */
@@ -20,9 +20,6 @@
     color: #00a2ff;
 }
 
-
-
-
 .tasks{   
     border-radius: 50%;
     height: 20px;
@@ -38,12 +35,10 @@
     margin: 0px 0px 0px 0px ;
 }
 
-#newtask{
+.newtask{
         color: black;
         padding-left: 5px;
-        /* margin-left: 1125px; */
-        margin-right: 100px;
-       
+        margin-left: 500px;      
 }
 
 .container{
@@ -103,8 +98,8 @@ h2{
     top: 50%;
     left: 50%;
     position: absolute;
-    padding: 10px;
-     border: 1px solid black; 
+    padding: 5px;
+    border: 1px solid black; 
     background-color: white;
     border-radius: 10px;
 }
@@ -120,6 +115,12 @@ h2{
 }
 
 /* index3.html */
+
+.newtask2{
+    color: black;
+    padding-left: 5px;
+    margin-left: 350px;
+}
 
 .newtask1{
  margin-left: 700px;
@@ -153,8 +154,38 @@ h2{
 }
 
 @media screen and (max-width: 500px) {
+ 
+     .navbar{
+        padding: 10px 50px;
+     }
+
+    .newtask{
+        margin-left: 50px;
+    }
+ 
+    .new1{
+      /* margin-left: 1px;  */
+     /* position: absolute; */
+    top: 50%;
+    left: 50%;
+    }
 
     .container{
         margin: 100px;
     }
+  
+    .arrow{
+        margin-left: 30px;
+    }
+
+    .newtask2{
+        margin-left: 100px;
+    }
+
+    .container1{
+        margin-left: 50px;
+    }
+
+
+
 }
