--- a/stylesheet.css
+++ b/stylesheet.css
@@ -153,7 +153,7 @@ h2{
     height: 100%;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 700px) {
  
      .navbar{
         padding: 10px 50px;
@@ -164,10 +164,13 @@ h2{
     }
  
     .new1{
-      /* margin-left: 1px;  */
-     /* position: absolute; */
-    top: 50%;
-    left: 50%;
+       margin: auto;  
+      position: absolute; 
+      left: 100px;
+    /* align-items: center; */
+      /* position: relative; */
+      /* top: 50%; */
+      /* left:50%; */
     }
 
     .container{
